--- a/src/dms/datasets/templates/datasets/tabularresource_detail.html
+++ b/src/dms/datasets/templates/datasets/tabularresource_detail.html
@@ -12,23 +12,17 @@
     </c-accordion.content>
 </c-accordion.item>
 {% endif %}
-{% comment %}
 {% if object.metadata.driverShortName == 'Parquet' %}
 <c-accordion.item value='preview'>
     <c-accordion.trigger value='preview' class="text-2xl font-bold">Preview</c-accordion.trigger>
     <c-accordion.content value='preview'>
-        <div id="parquet-preview" data-url="{{ object.uri }}"></div>
+        <iframe id="parquet-preview" style="width:100%; height:600px; border:none;">
+        </iframe>
     </c-accordion.content>
 </c-accordion.item>
+<script>
+    const query = btoa(document.getElementById('datasets/snippets/duckdb-sql-code').textContent.trim());
+    document.getElementById('parquet-preview').src = "/duckui/?query=" + query;
+</script>
 {% endif %}
-{% endcomment %}
 {% endblock resource_specific_content %}
-
-{% block body_javascript %}
-{{ block.super }}
-{% if object.metadata.driverShortName == 'Parquet' %}
-<link rel="stylesheet" href="{% static 'css/parquet.css' %}">
-<script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
-<script src="{% static 'js/parquet-preview.js' %}" data-type="module" type="text/babel"></script>
-{% endif %}
-{% endblock body_javascript %}
