--- a/src/dms/datasets/templates/datasets/mapresource_detail.html
+++ b/src/dms/datasets/templates/datasets/mapresource_detail.html
@@ -1,9 +1,9 @@
 {% extends 'datasets/resource_detail_base.html' %}
 
 {% block resource_specific_content %}
-<c-accordion.item value='item-2'>
-    <c-accordion.trigger value='item-2' class="text-2xl font-bold">Preview</c-accordion.trigger>
-    <c-accordion.content value='item-2'>
+<c-accordion.item value='preview'>
+    <c-accordion.trigger value='preview' class="text-2xl font-bold">Preview</c-accordion.trigger>
+    <c-accordion.content value='preview'>
         {% if object.map_type == 'nina' and NINA_MAP_PREVIEW %}
         <iframe src="{{ NINA_MAP_PREVIEW }}{{ object.uri }}" class="w-full h-[50rem]"></iframe>
         {% else %}
