--- a/src/dms/datasets/templates/datasets/resource_detail_base.html
+++ b/src/dms/datasets/templates/datasets/resource_detail_base.html
@@ -49,7 +49,7 @@
 <p class="mt-2">Access type: <em>{{ object.access_type }}</em></p>
 
 <c-accordion type='multiple'
-    open="{'meta': true, 'preview': true , 'schema': true, 'snippets': true, 'map': true, 'data': true, 'desc': true}" class="mt-4">
+    open="{'meta': true, 'preview': true , 'schema': true, 'snippets': true, 'map': true, 'data': true, 'desc': true, 'user-meta': true}" class="mt-4">
     {% if object.extent %}
     <c-accordion.item value='desc'>
         <c-accordion.trigger value='desc' class="text-2xl font-bold">Description</c-accordion.trigger>
@@ -83,6 +83,14 @@
         <c-accordion.trigger value='meta' class="text-2xl font-bold">Last sync</c-accordion.trigger>
         <c-accordion.content value='meta'>
             <c-json-object-viewer :dict="object.last_sync"></c-json-object-viewer>
+        </c-accordion.content>
+    </c-accordion.item>
+    {% endif %}
+    {% if object.user_metadata %}
+    <c-accordion.item value='user-meta'>
+        <c-accordion.trigger value='user-meta' class="text-2xl font-bold">Manully provided Metadata</c-accordion.trigger>
+        <c-accordion.content value='user-meta'>
+            {{ user_metadata_preview|safe }}
         </c-accordion.content>
     </c-accordion.item>
     {% endif %}
