chg: grass scripts

--- a/src/dms/datasets/templates/datasets/resource_detail_base.html
+++ b/src/dms/datasets/templates/datasets/resource_detail_base.html
@@ -70,7 +70,7 @@
         <c-accordion.content value='meta'>
             {% if object.is_metadata_manual %}
             <div class="alert alert-warning mb-4">
-                This metadata has been manually created or edited and are not be updated automatically.
+                This metadata has been manually created or edited and are not updated automatically.
                 This could mean that they are incomplete, outdated or could even use a different schema.
             </div>
             {% endif %}
