feat: add title

--- a/src/dms/datasets/templates/datasets/dataset_detail.html
+++ b/src/dms/datasets/templates/datasets/dataset_detail.html
@@ -7,6 +7,9 @@
 {% load leaflet_tags %}
 {% load utils %}
 
+{% block title %}
+{{ object }} | {{ block.super }}
+{% endblock %}
 
 {% block body_javascript %}
 {{ block.super }}
