--- a/src/dms/datasets/templates/datasets/dataset_form.html
+++ b/src/dms/datasets/templates/datasets/dataset_form.html
@@ -1,6 +1,10 @@
 {% extends "app.html" %}
 {% load crispy_forms_tags static leaflet_tags %}
 
+{% block title %}
+{% if object %}Edit: {{ object }}{% else %}Create Dataset{% endif %} | {{ block.super }}
+{% endblock %}
+
 {% block article %}
 <style>
     .leaflet-container {
