--- a/src/dms/projects/templates/projects/project_filter.html
+++ b/src/dms/projects/templates/projects/project_filter.html
@@ -1,3 +1,8 @@
 {% extends 'base_filter.html' %}
 
+{% block title %}
+Projects | {{ block.super }}
+{% endblock %}
+
+
 {% block page-title %}Projects{% endblock %}
